--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@ body{
   color:#fff;
   margin:0;
   font-family: 'Montserrat', sans-serif;
-  /* font-weight: 100;
-  font-weight: 600; */
+  font-weight: 100;
+}
+.lists{
+  margin-top:-150px;
 }
