--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -10,4 +10,68 @@
     width:inherit;
     height:inherit;
     background: linear-gradient(to right, #111 25%, transparent 85%);
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    padding:70px 0 150px 30px;
+}
+.featured--name{
+    font-size:60px;
+    font-weight: bold;
+}
+.featured--info{
+    font-size: 18px;
+    font-weight: bold;
+    margin-top:15px;
+    display:flex;
+}
+.featured--points{
+    color:#46d369;
+}
+.featured--year,
+.featured--points,
+.featured--seasons{
+    margin-right:15px;
+}
+.featured--description{
+    margin-top:15px;
+    font-size: 20px;
+    color:#fff;
+    max-width:40%;
+}
+.featured--buttons {
+    margin:15px 0;
+
+}
+.toWatchButton,
+.myListButton{
+    display: inline-block;
+    font-size:20px;
+    font-weight: bold;
+    padding:12px 25px;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-right: 10px;
+    text-transform: uppercase;
+    opacity: 1;
+    transition: .3s ease-in-out;
+}
+.toWatchButton:hover,
+.myListButton:hover{
+    opacity: 0.7;
+    transition: .3s ease-in;
+
+}
+.toWatchButton{
+    background-color: #fff;
+    color:#000;
+}
+.myListButton{
+    background-color: #333;
+    color:#fff;
+}
+.featured--genres{
+    margin-top: 15px;
+    font-size:18px;
+    color:#999;
 }
