--- a/src/components/MovieRow.css
+++ b/src/components/MovieRow.css
@@ -1,5 +1,6 @@
 .movieRow{
     margin-bottom: 30px;
+    overflow-x: hidden;
 }
 .movieRow h2{
     margin:0px 0px 0px 30px;
@@ -8,23 +9,52 @@
     overflow-x: hidden;    
 }
 .movieRow--list{
-    width:999999999999999999999px;
-    padding-left:30px;
+    transition: .5s ease-in;
 }
 .movieRow--item{
     display:inline-block;
     width:150px;
-    border-radius:4px 4px 0 0;
 }
 .movieRow--item img{
     width:100%;
     transform:  scale(0.9);
     transition: .3s ease-in-out;
     cursor: pointer;
-    border-radius:4px 4px 0 0;
 }
 .movieRow--item img:hover{
     transform: scale(1.0);
     transition: .2s ease-in-out;
     box-shadow: 0px 1px 6px 1px #fff;
 }
+.movieRow--left,
+.movieRow--right{
+    position: absolute;
+    width:30px;
+    height:225px;
+    background-color:rgba(0,0,0, 0.6);
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    cursor: pointer;
+    opacity: 0;
+    transition: .3s ease-in;
+}
+.movieRow--left{
+    left:0;
+}
+.movieRow--right{
+    right:0;
+}
+.movieRow:hover .movieRow--left,
+.movieRow:hover .movieRow--right{
+    opacity: 1;
+    transition: .3s ease-in;
+}
+
+/* @media screen and (max-width:768px){
+    .movieRow-listarea{
+        overflow-x: scroll;
+    }
+} */
