--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -82,6 +82,9 @@
     }
     .featured--description {
         max-width:100%;
+        height: 144px;
+        overflow-y: scroll;
+        margin-top: 25px;
     }
     .featured--horizontal{
         padding: 70px 10px 150px 10px;
@@ -94,5 +97,11 @@
         width: 100%;
         text-align: center;
         margin:5px 0;
+    }
+    .featured--buttons {
+        margin:25px 0;    
+    }
+    .featured-genres{
+        margin-bottom: 25px;
     }
 }
