--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -83,8 +83,10 @@
     .featured--description {
         max-width:100%;
         height: 144px;
+        min-height: 144px;
         overflow-y: scroll;
         margin-top: 25px;
+        font-size: 16px;
     }
     .featured--horizontal{
         padding: 70px 10px 150px 10px;
@@ -92,6 +94,7 @@
     .featured--info{
         display: flex;
         flex-direction: column;
+        margin:20px 0;
     }
     .featured--buttons a{
         width: 100%;
@@ -104,4 +107,8 @@
     .featured-genres{
         margin-bottom: 25px;
     }
+    .featured{
+        height:auto;
+    }
+ 
 }
